replace url of img with my tuchuang

--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
                 <div class="profile-card">
                     <div class="avatar-container">
                         <!-- 头像 -->
-                        <img src="./img/pic.webp" alt="个人头像" class="avatar">
+                        <img src="https://paopao-img.cpolar.cn/i/2025/12/08/693630eba94f9.webp" alt="个人头像" class="avatar">
                         <!-- 姓名 -->
                         <h1 class="name">刘汉旭</h1>
                         <!-- 英文名 -->
@@ -907,20 +907,20 @@
                     <h2 class="card-title">证书展示</h2>
                     <div class="certificate-scroll">
                         <div class="certificate-container">
-                            <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/patent_2.webp" alt="授权专利证书" class="certificate-img" loading="lazy">
-                            <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/A2.webp" alt="A2芯片攻关先锋奖杯" class="certificate-img" loading="lazy">
-                            <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/honor.webp" alt="优秀研究生证书" class="certificate-img" loading="lazy">
-                            <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/ruan_kao.webp" alt="软考证书" class="certificate-img" loading="lazy">
-                            <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/speech.webp" alt="演讲比赛证书" class="certificate-img" loading="lazy">
-                            <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/xianjin.webp" alt="先进个人领奖" class="certificate-img" loading="lazy">
-                            <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/jiangzuo1.webp" alt="讲座授课现场" class="certificate-img" loading="lazy">
-                            <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/school_xianjin.webp" alt="大学学习先进证书" class="certificate-img" loading="lazy">
-                            <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/school_ganbu.webp" alt="大学优秀干部证书" class="certificate-img" loading="lazy">
-                            <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/zhiyuan.webp" alt="志愿者证书" class="certificate-img" loading="lazy">
+                            <img src="https://paopao-img.cpolar.cn/i/2025/12/08/693630f136fc2.webp" alt="授权专利证书" class="certificate-img" loading="lazy">
+                            <img src="https://paopao-img.cpolar.cn/i/2025/12/08/693630e8449ff.webp" alt="A2芯片攻关先锋奖杯" class="certificate-img" loading="lazy">
+                            <img src="https://paopao-img.cpolar.cn/i/2025/12/08/693630e944254.webp" alt="优秀研究生证书" class="certificate-img" loading="lazy">
+                            <img src="https://paopao-img.cpolar.cn/i/2025/12/08/693630ecb7fff.webp" alt="软考证书" class="certificate-img" loading="lazy">
+                            <img src="https://paopao-img.cpolar.cn/i/2025/12/08/693630f1df6b1.webp" alt="演讲比赛证书" class="certificate-img" loading="lazy">
+                            <img src="https://paopao-img.cpolar.cn/i/2025/12/08/693630f2b745e.webp" alt="先进个人领奖" class="certificate-img" loading="lazy">
+                            <img src="https://paopao-img.cpolar.cn/i/2025/12/08/693630e9af797.webp" alt="讲座授课现场" class="certificate-img" loading="lazy">
+                            <img src="https://paopao-img.cpolar.cn/i/2025/12/08/693630f0949f7.webp" alt="大学文体先进证书" class="certificate-img" loading="lazy">
+                            <img src="https://paopao-img.cpolar.cn/i/2025/12/08/693630eed1511.webp" alt="大学优秀干部证书" class="certificate-img" loading="lazy">
+                            <img src="https://paopao-img.cpolar.cn/i/2025/12/08/693630f37be54.webp" alt="志愿者证书" class="certificate-img" loading="lazy">
                             <!-- 重复图片实现无缝循环 -->
-                            <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/patent_2.webp" alt="授权专利证书" class="certificate-img" loading="lazy">
-                            <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/A2.webp" alt="A2芯片攻关先锋奖杯" class="certificate-img" loading="lazy">
-                            <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/honor.webp" alt="优秀研究生证书" class="certificate-img" loading="lazy">
+                            <img src="https://paopao-img.cpolar.cn/i/2025/12/08/693630f136fc2.webp" alt="授权专利证书" class="certificate-img" loading="lazy">
+                            <img src="https://paopao-img.cpolar.cn/i/2025/12/08/693630e8449ff.webp" alt="A2芯片攻关先锋奖杯" class="certificate-img" loading="lazy">
+                            <img src="https://paopao-img.cpolar.cn/i/2025/12/08/693630e944254.webp" alt="优秀研究生证书" class="certificate-img" loading="lazy">
                         </div>
                     </div>
                 </div>
